# RustPractice

./: Cargo.toml  main
src/: database.rs  db_handler.rs  input_handler.rs  main.rs  user.rs
