[package]
name = "rust-training"
version = "0.1.0"
authors = ["Natalie Dorshimer <dorshimer.natalie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
uuid = { version = "0.8", features = ["v4"] }
